# simplejpeg

./: .gitignore  .gitlab-ci.yml  CHANGELOG  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  build-requirements.txt  build-turbojpeg.bat  build-turbojpeg.ps1  build-turbojpeg.sh  build-wheels.ps1  build-wheels.sh  build_requirements.txt  build_sdist.sh  build_wheels.ps1  build_wheels.sh  build_wheels_macos.sh  check-artifacts.sh  check-wheels.sh  check_artifacts.py  check_artifacts.sh  check_wheels.py  import_appveyor.py  install_cmake.sh  publish-wheels.sh  publish_wheels.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_requirements.txt
.github/workflows/: build_wheels.yml
lib/turbojpeg/windows/AMD64/: turbojpeg-static.lib
lib/turbojpeg/windows/x86/: turbojpeg-static.lib
simplejpeg/: __init__.py  _jpeg.c  _jpeg.pyi  _jpeg.pyx
test/: test_decode.py  test_encode.py  test_encode_yuv.py
turbojpeg/: __init__.py  _color.c  _jpeg.c  _jpeg.pyi  _jpeg.pyx
