[build-system]
requires = ["setuptools>=50.0.3", "wheel", "cmake>=3.6.3,<=3.22.5", "cython==0.29.35", "oldest-supported-numpy"]
requires-python = ">=3.7"
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
environment = "PIP_ONLY_BINARY=:all:"
skip = "{cp36-*,*-win32,*_i686,pp*,*musllinux*}"
test-requires = "pytest>=5.3.2 numpy Pillow>=7.0.0"
test-command = "pytest {project}/test -vv"
