[project]
name = "simplejpeg"
description = "A simple package for fast JPEG encoding and decoding."
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Joachim Folz", email = "joachim.folz@dfki.de" }]
keywords = [
    "the",
    "fastest",
    "JPEG",
    "encoding",
    "decoding",
    "package",
    "in",
    "town",
]
dynamic = ["dependencies", "version"]

[project.urls]
Documentation = "https://github.com/jfolz/simplejpeg/blob/master/README.rst"
Source = "https://github.com/jfolz/simplejpeg"
Tracker = "https://github.com/jfolz/simplejpeg/issues"

[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
    "cython~=3.1.0",
    "numpy>=2.0.0",
]
backend-path = ["custom_build_backend"]
build-backend = "custom_build_meta"

[tool.cibuildwheel]
environment = "PIP_ONLY_BINARY=:all:"
skip = "*_i686 pp* *musllinux* *-win32"
build-verbosity = 1
test-requires = "pytest>=5.3.2 numpy Pillow>=7.0.0"
test-command = "pytest {project}/test -vv"
